tests/invalids/missingMain.gt
proc main ()
    int m;
begin 
    read m;
end

proc main ()
    int n;
begin
    read n;
end
